--- a/HomeDesigner.csproj
+++ b/HomeDesigner.csproj
@@ -5,16 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="ref\models\cube.obj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="ref\models\cube.obj">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
     <!--contentFiles: removes the Content folder that pops up in the solution explorer -->
     <PackageReference Include="BlishHUD" Version="1.0.0" ExcludeAssets="runtime;contentFiles;analyzers" />
     <PackageReference Include="InputSimulator" Version="1.0.4" />
@@ -23,6 +13,33 @@
     <PackageReference Include="WindowsBase_Core.STW" Version="4.0.30319.1" />
     <PackageReference Include="WindowsInput" Version="6.4.1" />
     <PackageReference Include="WindowsInput_Std" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="ref\models\cube.obj">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="ref\models\eleganter_tisch.obj">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="ref\models\klavier.obj">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="ref\models\klavier_test.obj">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="ref\models\kodan_ofen.obj">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="ref\models\kodan_zaun.obj">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="ref\models\realCube.obj">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="ref\models\tisch_test.obj">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
