Reorganized Designer View UI Added Toolbar Designer now support decoration payloads Selectable decorations now use icons and categories decoration icons are now stored locally gizmos now have always the same size, not matter how far away they are added an option to adjust gizmo size decorations are now hidden when further away added an option to adjust at what range decoration gets hidden

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "HomeDesigner",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "namespace": "Kiroho.Joka.HomeDesigner",
     "package": "HomeDesigner.dll",
     "manifest_version": 1,
@@ -10,6 +10,7 @@
         "bh.blishhud": ">=1.0.0"
     },
     "url": "",
+    "directories": [ "HomeDesigner" ],
     "contributors": [
         {
             "name": "Kiroho Joka",
