Gizmos scale with camera range module unloads correctly templates now work with payloads text can now be entered for decorations with textbox decorations further away can now be hidden new toolbar new icons for toolbar new icons and categories for decoration list main window is now more responsive some fixes for rectangle/lasso selection

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
     "name": "HomeDesigner",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "namespace": "Kiroho.Joka.HomeDesigner",
     "package": "HomeDesigner.dll",
     "manifest_version": 1,
 
-    "description": "This module provides additional features for Homstead decorating.",
+    "description": "Provides additional features for Homstead decorating. Easy merging of templates, searching differences between templates and nn own Designer tool.",
     "dependencies": {
         "bh.blishhud": ">=1.0.0"
     },
